<resources>
    <string name="app_name">SingUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Username:</string>
    <string name="password">Password:</string>
    <string name="user_name_hint">Please enter your user name</string>
    <string name="password_hint">Please enter your password</string>
    <string name="submit">Submit</string>

</resources>
