<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/signupform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/usernamefeild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/user_name"
                android:id="@+id/username"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="75"
                android:layout_height="wrap_content"
                android:hint="@string/user_name_hint"
                android:id="@+id/txtUserName"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordfeild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/password"
                android:id="@+id/passwordlabel"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="75"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:id="@+id/passwordinput"
                />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@+id/signupform"
        android:layout_alignRight="@+id/signupform" />

</RelativeLayout>
